# PDF2EPUB

./: README.md  planning.md  pyproject.toml  pytest.ini  requirements.txt
.cursor/sprints/backlog/: product.md
.cursor/sprints/sprint_1/execution/: tasks.md
.cursor/sprints/sprint_1/planning/: goals.md
.cursor/sprints/sprint_2/execution/: tasks.md
.cursor/sprints/sprint_2/planning/: goals.md
.cursor/sprints/sprint_3/execution/: tasks.md
.cursor/sprints/sprint_3/planning/: goals.md
.cursor/sprints/sprint_4/execution/: tasks.md
.cursor/sprints/sprint_4/planning/: goals.md
src/: epub_packager.py  html_converter.py  image_optimizer.py  layout_analyzer.py  main.py  pdf_processor.py  toc_generator.py  utils.py
tests/: test_epub_packager.py  test_utils.py
